--- a/IMAP.Popup/packages.config
+++ b/IMAP.Popup/packages.config
@@ -11,6 +11,7 @@
   <package id="Microsoft.Data.OData" version="5.2.0" targetFramework="net45" />
   <package id="Microsoft.WindowsAzure.ConfigurationManager" version="1.8.0.0" targetFramework="net45" />
   <package id="MimeKit" version="0.30.0.0" targetFramework="net45" />
+  <package id="NetSparkle" version="1.1.0" targetFramework="net45" />
   <package id="RavenDB.Client" version="2.5.2851" targetFramework="net45" />
   <package id="RavenDB.Database" version="2.5.2851" targetFramework="net45" />
   <package id="RavenDB.Embedded" version="2.5.2851" targetFramework="net45" />
